comment rpc client and etcd

--- a/app/api/etc/metaland.yaml
+++ b/app/api/etc/metaland.yaml
@@ -3,10 +3,11 @@ Host: 0.0.0.0
 Port: 9101
 
 DB:
-  DataSource: "metaLand:ekZinLn5xPDPjmTz@tcp(45.249.209.63:3306)/metaland"
+  DataSource: ""
 
 AUTH:
   AccessSecret: "123123"
   AccessExpire: 86400
 
-RPCClientConf:
+#RPCClientConf:
+#  Hosts:
