add block sync app

--- a/app/api/etc/meta_land.yaml
+++ b/app/api/etc/meta_land.yaml
@@ -3,8 +3,11 @@ Host: 0.0.0.0
 Port: 8888
 
 DB:
-  DataSource: ""
+  DataSource: "root:st123456@tcp(127.0.0.1:3306)/metaland?charset=utf8mb4&parseTime=True&loc=Local"
 
-Auth:
-  AccessSecret: "123123"
-  AccessExpire: 300
+JWT:
+  Secret: "123123"
+  Expired: 300
+
+Minio:
+  Bucket: ""
