添加治理模块 governance (#21)
* 添加治理模块

* 添加crowfunding/proposal 定时任务

* bounty模块列表查询及详情接口 (#19)

* Monitor transaction status and update related database #15

* Add crowdfunding module related API interface #14

---------

Co-authored-by: Mike Zhao <>
Co-authored-by: codeMachine12138 <103303607+codeMachine12138@users.noreply.github.com>

--- a/app/api/etc/meta_land.yaml
+++ b/app/api/etc/meta_land.yaml
@@ -3,7 +3,7 @@ Host: 0.0.0.0
 Port: 8888
 
 DB:
-  DataSource: ""
+  DataSource: "root:123456@tcp(127.0.0.1:3309)/metaland?charset=utf8mb4&parseTime=True&loc=Local"
 
 JWT:
   Secret: "123123"
@@ -13,6 +13,6 @@ Minio:
   Bucket: ""
 
 Redis:
-  Host: ""
-  Password: ""
+  Host: "127.0.0.1:6379"
+  Password: "12345678"
   DB: 0
